# jsonschema2pydantic

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/jsonschema2pydantic/: __init__.py  generator.py
tests/: test_generate_schema.py
